[chore] stub /api/v1/featured_tags endpoint (#1420)
