# internal/api/client.go
@@ -29,6 +29,7 @@ import (
 	"github.com/superseriousbusiness/gotosocial/internal/api/client/bookmarks"
 	"github.com/superseriousbusiness/gotosocial/internal/api/client/customemojis"
 	"github.com/superseriousbusiness/gotosocial/internal/api/client/favourites"
+	"github.com/superseriousbusiness/gotosocial/internal/api/client/featuredtags"
 	filter "github.com/superseriousbusiness/gotosocial/internal/api/client/filters"
 	"github.com/superseriousbusiness/gotosocial/internal/api/client/followrequests"
 	"github.com/superseriousbusiness/gotosocial/internal/api/client/instance"
@@ -58,6 +59,7 @@ type Client struct {
 	bookmarks      *bookmarks.Module      // api/v1/bookmarks
 	customEmojis   *customemojis.Module   // api/v1/custom_emojis
 	favourites     *favourites.Module     // api/v1/favourites
+	featuredTags   *featuredtags.Module   // api/v1/featured_tags
 	filters        *filter.Module         // api/v1/filters
 	followRequests *followrequests.Module // api/v1/follow_requests
 	instance       *instance.Module       // api/v1/instance
@@ -93,6 +95,7 @@ func (c *Client) Route(r router.Router, m ...gin.HandlerFunc) {
 	c.bookmarks.Route(h)
 	c.customEmojis.Route(h)
 	c.favourites.Route(h)
+	c.featuredTags.Route(h)
 	c.filters.Route(h)
 	c.followRequests.Route(h)
 	c.instance.Route(h)
@@ -119,6 +122,7 @@ func NewClient(db db.DB, p processing.Processor) *Client {
 		bookmarks:      bookmarks.New(p),
 		customEmojis:   customemojis.New(p),
 		favourites:     favourites.New(p),
+		featuredTags:   featuredtags.New(p),
 		filters:        filter.New(p),
 		followRequests: followrequests.New(p),
 		instance:       instance.New(p),
